Update to include Frierson et al. (2006) vertical diffusion Refactor to include diffusion tendency in implicit solver 	modified:   src/cache/precomputed_quantities.jl 	modified:   src/cache/temporary_quantities.jl 	modified:   src/prognostic_equations/vertical_diffusion_boundary_layer.jl 	modified:   src/solver/model_getters.jl 	modified:   src/solver/types.jl 	modified:   perf/flame.jl 	modified:   .buildkite/pipeline.yml 	modified:   config/perf_configs/flame_perf_target_frierson.yml

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -784,6 +784,14 @@ steps:
         artifact_paths: "flame_sphere_baroclinic_wave_rhoe_equilmoist_expvdiff/*"
         agents:
           slurm_mem: 40GB
+      
+      - label: ":fire: Flame graph: perf target (frierson diffusion)"
+        command: >
+          julia --color=yes --project=perf perf/flame.jl
+          $PERF_CONFIG_PATH/flame_perf_target_frierson.yml
+        artifact_paths: "flame_perf_target_frierson/*"
+        agents:
+          slurm_mem: 48GB
 
       - label: ":fire: Flame graph: perf target (Threaded)"
         command: >
