add diagnostic edmf longruns

--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.yml
@@ -3,28 +3,28 @@ z_max: 55000.0
 z_elem: 63
 dz_bottom: 30.0
 dz_top: 3000.0
-moist: "equil" 
-precip_model: "0M" 
+moist: "equil"
+precip_model: "0M"
 override_τ_precip: false
-rad: "allskywithclear" 
-idealized_insolation: false
-dt_rad: "1hours"
-surface_setup: "DefaultMoninObukhov" 
-turbconv: "diagnostic_edmfx" 
+rad: "clearsky"
+dt_rad: "6hours"
+surface_setup: "DefaultMoninObukhov"
+turbconv: "diagnostic_edmfx"
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
 prognostic_tke: true
-edmfx_upwinding: "first_order" 
-edmfx_entr_model: "Generalized" 
-edmfx_detr_model: "Generalized" 
-edmfx_nh_pressure: true 
+edmfx_upwinding: "first_order"
+edmfx_entr_model: "Generalized"
+edmfx_detr_model: "Generalized"
+edmfx_nh_pressure: true
 edmfx_sgs_mass_flux: true
 edmfx_sgs_diffusive_flux: true
 rayleigh_sponge: true
-dt_save_state_to_disk: "1days"
-dt: "50secs" 
-t_end: "10days"
-FLOAT_TYPE: "Float32"
-job_id: "longrun_aquaplanet_amip" 
-toml: [toml/longrun_aquaplanet_amip.toml]
+dt_save_state_to_disk: "10days"
+dt: "50secs"
+t_end: "30days"
+job_id: "longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M"
+toml: [toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml]
 output_default_diagnostics: false
 diagnostics:
   - short_name: ts
@@ -82,18 +82,6 @@ diagnostics:
     reduction_time: average
     period: 1days
   - short_name: rlu
-    reduction_time: average
-    period: 1days
-  - short_name: rsdcs
-    reduction_time: average
-    period: 1days
-  - short_name: rsucs
-    reduction_time: average
-    period: 1days
-  - short_name: rldcs
-    reduction_time: average
-    period: 1days
-  - short_name: rlucs
     reduction_time: average
     period: 1days
   - short_name: arup
