--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_clearsky_tvinsol_0M_slabocean.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_clearsky_tvinsol_0M_slabocean.yml
@@ -4,7 +4,9 @@ t_end: "100days"
 moist: "equil"
 precip_model: "0M"
 surface_setup: "DefaultMoninObukhov"
-vert_diff: "true"
+vert_diff: "FriersonDiffusion"
+implicit_diffusion: true
+max_newton_iters_ode: 2
 rad: "clearsky"
 idealized_insolation: false
 dt_rad: "1hours"
