--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -266,7 +266,7 @@ netcdf_interpolate_z_over_msl:
   value: false
 netcdf_output_at_levels:
   help: "Do not perform any vertical interpolation in the output NetCDF files. Instead, interpolate horizontally and output the level. This is incompatible with netcdf_interpolate_z_over_msl when topography is present."
-  value: true
+  value: false
 warn_allocations_diagnostics:
   help: "When true, a dry-run for all the diagnostics is performed to check whether the functions allocate additional memory (which reduces performances)"
   value: false
