--- a/config/model_configs/sphere_baroclinic_wave_rhoe_topography_dcmip_rs.yml
+++ b/config/model_configs/sphere_baroclinic_wave_rhoe_topography_dcmip_rs.yml
@@ -9,11 +9,5 @@ dt: "200secs"
 job_id: "sphere_baroclinic_wave_rhoe_topography_dcmip_rs"
 netcdf_interpolate_z_over_msl: true
 diagnostics:
-  - short_name: pfull
-    period: 1days
-  - short_name: wa
-    period: 1days
-  - short_name: va
-    period: 1days
-  - short_name: rv
+  - short_name: [pfull, wa, va, rv]
     period: 1days
