--- a/config/longrun_configs/longrun_hs_rhoe_equil_highres_topography_earth.yml
+++ b/config/longrun_configs/longrun_hs_rhoe_equil_highres_topography_earth.yml
@@ -8,8 +8,8 @@ dz_bottom: 30.0
 vert_diff: "true"
 h_elem: 16
 use_reference_state: false
-kappa_4_vorticity: 4.0
-kappa_4_scalar: 4.0
+vorticity_hyperdiffusion_coefficient: 4.0
+scalar_hyperdiffusion_coefficient: 4.0
 forcing: "held_suarez"
 precip_model: "0M"
 topography: "Earth"
