--- a/config/model_configs/box_hydrostatic_balance_rhoe.yml
+++ b/config/model_configs/box_hydrostatic_balance_rhoe.yml
@@ -5,7 +5,5 @@ dt: "20secs"
 perturb_initstate: false
 job_id: "box_hydrostatic_balance_rhoe"
 diagnostics:
-  - short_name: wa
-    period: 1days
-  - short_name: ua
+  - short_name: [wa, ua]
     period: 1days
