--- a/config/model_configs/single_column_precipitation_test.yml
+++ b/config/model_configs/single_column_precipitation_test.yml
@@ -19,17 +19,5 @@ check_precipitation: true
 job_id: "single_column_precipitation_test"
 toml: [toml/single_column_precipitation_test.toml]
 diagnostics:
-  - short_name: hus
-    period: 500secs
-  - short_name: clw
-    period: 500secs
-  - short_name: cli
-    period: 500secs
-  - short_name: husra
-    period: 500secs
-  - short_name: hussn
-    period: 500secs
-  - short_name: ta
-    period: 500secs
-  - short_name: wa
+  - short_name: [hus, clw, cli, husra, hussn, ta, wa]
     period: 500secs
