--- a/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_bw_rhoe_equil_highres.yml
@@ -9,13 +9,5 @@ precip_model: "0M"
 job_id: "longrun_bw_rhoe_equil_highres"
 moist: "equil"
 diagnostics:
-  - short_name: pfull
-    period: 1days
-  - short_name: wa
-    period: 1days
-  - short_name: va
-    period: 1days
-  - short_name: rv
-    period: 1days
-  - short_name: hus
+  - short_name: [pfull, wa, va, rv, hus]
     period: 1days
