--- a/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
@@ -12,13 +12,5 @@ job_id: "longrun_ssp_bw_rhoe_equil_highres"
 moist: "equil"
 apply_limiter: true
 diagnostics:
-  - short_name: pfull
-    period: 1days
-  - short_name: wa
-    period: 1days
-  - short_name: va
-    period: 1days
-  - short_name: rv
-    period: 1days
-  - short_name: hus
+  - short_name: [pfull, wa, va, rv, hus]
     period: 1days
