--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_diffonly_0M.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_diffonly_0M.yml
@@ -25,7 +25,7 @@ job_id: "longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_diffonly_0M"
 toml: [toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml]
 output_default_diagnostics: false
 diagnostics:
-  - short_name: [ts, ta, theta, ha, pfull, rho, ua, va, wa, hfes, hur, hus, cl, clw, cli, evspsbl, rsd, rsu, rld, rlu, rsdcs, rsucs, rldcs, rlucs]
+  - short_name: [ts, ta, thetaa, ha, pfull, rhoa, ua, va, wa, hfes, hur, hus, cl, clw, cli, evspsbl, rsd, rsu, rld, rlu]
     reduction_time: average
     period: 1days
   - short_name: [arup, waup, taup, thetaaup, haup, husup, hurup, clwup, cliup, waen, tke, lmix]
