--- a/Project.toml
+++ b/Project.toml
@@ -46,13 +46,13 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.7.25"
+CLIMAParameters = "0.7.25, 0.8"
+CPUSummary = "0.2"
 ClimaComms = "0.5.6"
 ClimaCore = "0.11.7"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
-CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
