--- a/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml
+++ b/config/model_configs/sphere_aquaplanet_rhoe_equilmoist_allsky_gw_res.yml
@@ -4,7 +4,9 @@ dz_bottom: 300.0
 dt: "400secs"
 t_end: "24hours"
 dt_save_state_to_disk: "24hours"
-vert_diff: "true"
+vert_diff: "FriersonDiffusion"
+implicit_diffusion: true
+approximate_linear_solve_iters: 2
 moist: "equil"
 precip_model: "1M"
 precip_upwinding: "first_order"
