add regression test for diagnostic edmf

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -209,9 +209,19 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist.yml
+
+          julia --color=yes --project=examples regression_tests/test_mse.jl
+          --job_id sphere_baroclinic_wave_rhoe_equilmoist
+          --out_dir sphere_baroclinic_wave_rhoe_equilmoist
         artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist/*"
         agents:
           slurm_constraint: icelake|cascadelake|skylake|epyc
+
+      - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist with cloud diagnostics"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file $CONFIG_PATH/sphere_baroclinic_wave_rhoe_equilmoist_cldiag.yml
+        artifact_paths: "sphere_baroclinic_wave_rhoe_equilmoist_cldiag/*"
 
       - label: ":computer: no lim ARS baroclinic wave (ρe) equilmoist explicit vertdiff"
         command: >
@@ -495,9 +505,14 @@ steps:
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file $CONFIG_PATH/diagnostic_edmfx_aquaplanet.yml
+
+          julia --color=yes --project=examples regression_tests/test_mse.jl
+          --job_id diagnostic_edmfx_aquaplanet
+          --out_dir diagnostic_edmfx_aquaplanet
         artifact_paths: "diagnostic_edmfx_aquaplanet/*"
         agents:
           slurm_mem: 20GB
+          slurm_constraint: icelake|cascadelake|skylake|epyc
 
   - group: "Prognostic EDMFX"
     steps:
