--- a/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_gray_0M.yml
+++ b/config/longrun_configs/longrun_aquaplanet_rhoe_equil_55km_nz63_gray_0M.yml
@@ -9,7 +9,7 @@ dz_bottom: 30.0
 dz_top: 3000.0
 vert_diff: "FriersonDiffusion"
 implicit_diffusion: true
-max_newton_iters_ode: 2
+approximate_linear_solve_iters: 2
 surface_setup: "DefaultExchangeCoefficients"
 moist: "equil"
 rad: "gray"
