--- a/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_ssp_bw_rhoe_equil_highres.yml
@@ -1,6 +1,6 @@
 dt_save_state_to_disk: "10days"
 initial_condition: "MoistBaroclinicWave"
-max_newton_iters_ode: 3
+approximate_linear_solve_iters: 2
 z_elem: 45
 dt: "150secs"
 t_end: "100days"
