--- a/config/perf_configs/flame_perf_target_frierson.yml
+++ b/config/perf_configs/flame_perf_target_frierson.yml
@@ -1,5 +1,5 @@
 vert_diff: "FriersonDiffusion"
-max_newton_iters_ode: 2
+pproximate_linear_solve_iters: 2
 use_krylov_method: true
 use_dynamic_krylov_rtol: false
 krylov_rtol: 0.99
