CompatHelper: bump compat for Insolation to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -47,19 +47,19 @@ ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.25"
+CPUSummary = "0.2"
 ClimaComms = "0.5.6"
 ClimaCore = "0.11.8"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
-CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
 DiffEqCallbacks = "2"
 DocStringExtensions = "0.8, 0.9"
 FastGaussQuadrature = "0.4, 0.5, 1"
-Insolation = "0.8"
+Insolation = "0.8, 0.9"
 Interpolations = "0.14, 0.15"
 IntervalSets = "0.5, 0.6, 0.7"
 Krylov = "0.9"
