CompatHelper: bump compat for SurfaceFluxes to 0.9, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -47,12 +47,12 @@ ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7.25"
+CPUSummary = "0.2"
 ClimaComms = "0.5.6"
 ClimaCore = "0.11.8"
 ClimaTimeSteppers = "0.7.14"
 CloudMicrophysics = "0.15.0"
 Colors = "0.12"
-CPUSummary = "0.2"
 Dates = "1"
 Dierckx = "0.5"
 DiffEqBase = "6"
@@ -76,7 +76,7 @@ SciMLBase = "1, 2"
 StaticArrays = "1"
 Statistics = "1"
 StatsBase = "0.33, 0.34"
-SurfaceFluxes = "0.8.0"
+SurfaceFluxes = "0.8.0, 0.9"
 Thermodynamics = "0.11"
 YAML = "0.4"
 julia = "1.7"
