--- a/Project.toml
+++ b/Project.toml
@@ -46,7 +46,7 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 Artifacts = "1"
 AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.7.25"
+CLIMAParameters = "0.8, 0.9"
 ClimaComms = "0.5.6"
 ClimaCore = "0.11.8"
 ClimaTimeSteppers = "0.7.14"
@@ -76,7 +76,7 @@ SciMLBase = "1, 2"
 StaticArrays = "1"
 Statistics = "1"
 StatsBase = "0.33, 0.34"
-SurfaceFluxes = "0.8.0"
+SurfaceFluxes = "0.8, 0.9"
 Thermodynamics = "0.11"
 YAML = "0.4"
 julia = "1.7"
