change alpha_rayleigh_uh to zero in longruns

--- a/toml/longrun_aquaplanet_dyamond.toml
+++ b/toml/longrun_aquaplanet_dyamond.toml
@@ -2,3 +2,8 @@
 alias = "zd_rayleigh"
 value = 35000.0
 type = "float"
+
+[alpha_rayleigh_uh]
+alias = "alpha_rayleigh_uh"
+value = 0.0
+type = "float"
