--- a/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_0M_earth.toml
+++ b/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_0M_earth.toml
@@ -8,3 +8,7 @@ alias = "zd_rayleigh"
 value = 35000.0
 type = "float"
 
+[alpha_rayleigh_uh]
+alias = "alpha_rayleigh_uh"
+value = 0.0
+type = "float"
