--- a/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml
+++ b/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml
@@ -3,6 +3,11 @@ alias = "zd_rayleigh"
 value = 35000.0
 type = "float"
 
+[alpha_rayleigh_uh]
+alias = "alpha_rayleigh_uh"
+value = 0.0
+type = "float"
+
 [precipitation_timescale]
 alias = "τ_precip"
 value = 600
