--- a/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_gray_0M.toml
+++ b/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_gray_0M.toml
@@ -2,3 +2,8 @@
 alias = "zd_rayleigh"
 value = 35000.0
 type = "float"
+
+[alpha_rayleigh_uh]
+alias = "alpha_rayleigh_uh"
+value = 0.0
+type = "float"
