--- a/toml/longrun_hs_rhoe_dry_55km_nz63.toml
+++ b/toml/longrun_hs_rhoe_dry_55km_nz63.toml
@@ -2,3 +2,8 @@
 alias = "zd_rayleigh"
 value = 35000.0
 type = "float"
+
+[alpha_rayleigh_uh]
+alias = "alpha_rayleigh_uh"
+value = 0.0
+type = "float"
