--- a/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml
+++ b/toml/longrun_aquaplanet_rhoe_equil_55km_nz63_clearsky_diagedmf_0M.toml
@@ -13,7 +13,7 @@ alias = "τ_precip"
 value = 600
 type = "float"
 
-[entr_tau]
+[entr_inv_tau]
 alias = "entr_tau"
 value = 0.002
 type = "float"
@@ -23,7 +23,7 @@ alias = "entr_coeff"
 value = 0
 type = "float"
 
-[detr_tau]
+[detr_inv_tau]
 alias = "detr_tau"
 value = 0
 type = "float"
