--- a/toml/prognostic_edmfx_box.toml
+++ b/toml/prognostic_edmfx_box.toml
@@ -13,7 +13,7 @@ alias = "max_area"
 value = 0.9
 type = "float"
 
-[entr_tau]
+[entr_inv_tau]
 alias = "entr_tau"
 value = 0.002
 type = "float"
@@ -28,7 +28,7 @@ alias = "min_area_limiter_scale"
 value = 0
 type = "float"
 
-[detr_tau]
+[detr_inv_tau]
 alias = "detr_tau"
 value = 0
 type = "float"
