--- a/toml/prognostic_edmfx_bomex_box.toml
+++ b/toml/prognostic_edmfx_bomex_box.toml
@@ -13,7 +13,7 @@ alias = "max_area"
 value = 0.7
 type = "float"
 
-[entr_tau]
+[entr_inv_tau]
 alias = "entr_tau"
 value = 0
 type = "float"
@@ -33,7 +33,7 @@ alias = "min_area_limiter_power"
 value = 10
 type = "float"
 
-[detr_tau]
+[detr_inv_tau]
 alias = "detr_tau"
 value = 0
 type = "float"
