--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -72,23 +72,23 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 BenchmarkTools = "1"
 BlockArrays = "0.16"
-CairoMakie = "0.10"
-ClimaCoreMakie = "0.4"
+CairoMakie = "0.10, 0.11"
+ClimaCoreMakie = "0.3, 0.4"
 ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.7"
-CloudMicrophysics = "0.15"
+CloudMicrophysics = "0.15.2"
 DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
 JET = "0.7, 0.8"
 JSON = "0.21"
-OrderedCollections = "1"
+OrderedCollections = "1.6"
 PProf = "2"
 Plots = "1"
 PoissonRandom = "0.4"
-PrettyTables = "1, 2"
+PrettyTables = "2"
 ProfileCanvas = "0.1"
 ProgressLogging = "0.1"
 QuadGK = "2"
