--- a/test/Project.toml
+++ b/test/Project.toml
@@ -66,8 +66,8 @@ YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 [compat]
 Aqua = "0.8"
 BlockArrays = "0.16"
-CairoMakie = "0.10"
-ClimaCoreMakie = "0.4"
+CairoMakie = "0.10, 0.11"
+ClimaCoreMakie = "0.3, 0.4"
 ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
@@ -79,10 +79,10 @@ ForwardDiff = "0.10"
 Glob = "1"
 JSON = "0.21"
 NCRegressionTests = "0.2"
-OrderedCollections = "1"
+OrderedCollections = "1.6"
 Plots = "1"
 PoissonRandom = "0.4"
-PrettyTables = "1, 2"
+PrettyTables = "2"
 ProgressLogging = "0.1"
 QuadGK = "2"
 SafeTestsets = "0.1"
