--- a/examples/Project.toml
+++ b/examples/Project.toml
@@ -73,17 +73,17 @@ ClimaCorePlots = "0.2"
 ClimaCoreSpectra = "0.1"
 ClimaCoreTempestRemap = "0.3"
 ClimaCoreVTK = "0.7"
-CloudMicrophysics = "0.15"
+CloudMicrophysics = "0.15.2"
 ForwardDiff = "0.10"
 Glob = "1"
 HDF5_jll = "1.14"
 JET = "0.7, 0.8"
 JSON = "0.21"
 NCRegressionTests = "0.2"
-OrderedCollections = "1"
+OrderedCollections = "1.6"
 Plots = "1"
 PoissonRandom = "0.4"
-PrettyTables = "1, 2"
+PrettyTables = "2"
 ProgressLogging = "0.1"
 QuadGK = "2"
 SciMLBase = "1, 2"
