--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -765,6 +765,12 @@ steps:
         agents:
           slurm_mem: 24GB
 
+      - label: ":fire: Flame graph: perf target (default)"
+        command: julia --color=yes --project=perf perf/jet.jl
+        artifact_paths: "perf_jet/*"
+        agents:
+          slurm_mem: 48GB
+
       - label: ":fire: Flame graph: perf target (with tracers)"
         command: >
           julia --color=yes --project=perf perf/flame.jl
