--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -765,11 +765,11 @@ steps:
         agents:
           slurm_mem: 24GB
 
-      - label: ":fire: Flame graph: perf target (default)"
+      - label: ":rocket: JET: perf target (default)"
         command: julia --color=yes --project=perf perf/jet.jl
         artifact_paths: "perf_jet/*"
         agents:
-          slurm_mem: 48GB
+          slurm_mem: 200GB
 
       - label: ":fire: Flame graph: perf target (with tracers)"
         command: >
